Get rid of double-scrollbar anti-fix
Okay, seems RC2 fixed it anyway and made our change irrelevant. Closes #23.
Again.

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -21,11 +21,6 @@ body {
   overflow-y: scroll;
 }
 
-.modal {
-  /* Okay, what is this double-scrollbar nonsense? */
-  overflow-y: auto;
-}
-
 /* More compact or something. */
 .form-group {
   margin-bottom: 5px;
